Rework data pack registries to use the vanilla system